new icons and height

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.html
@@ -24,7 +24,7 @@
 	<div class="box">
 		<ansyn-combo-box
 			[buttonClass]="'rtl' === ('direction' | translate) ? 'search-panel-button-left' : 'search-panel-button-right'"
-			icon="icon icon-status-bar-orientation"
+			icon="icon icon-status-bar-orientation small"
 			direction="top"
 			name="orientation"
 			[withArrow]="false"
