--- a/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.less
@@ -28,6 +28,11 @@
 				&:hover:not(.active) {
 					background: @status-bar-hover;
 				}
+
+				i.small { // until we get new small icons
+					font-size: 1em;
+
+				}
 			}
 
 			/deep/ button.search-panel-button-left {
