--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -19,7 +19,7 @@
 .icon-favorite-empty:before { content: '\e811'; } /* '' */
 .icon-frame-mode:before { content: '\e812'; } /* '' */
 .icon-layer-import:before { content: '\e813'; } /* '' */
-.icon-input-filter:before { content: '\e814'; } /* '' */
+.icon-status-bar-orientation:before { content: '\e814'; } /* '' */
 .icon-layers-hide:before { content: '\e815'; } /* '' */
 .icon-layers-show:before { content: '\e816'; } /* '' */
 .icon-change-map:before { content: '\e817'; } /* '' */
@@ -43,8 +43,8 @@
 .icon-shadow-mouse:before { content: '\e829'; } /* '' */
 .icon-share:before { content: '\e82a'; } /* '' */
 .icon-status-bar-case:before { content: '\e82b'; } /* '' */
-.icon-status-bar-geo:before { content: '\e82c'; } /* '' */
 .icon-status-bar-imagery-count:before { content: '\e82d'; } /* '' */
+.icon-input-filter:before { content: '\e82e'; } /* '' */
 .icon-status-bar-time:before { content: '\e830'; } /* '' */
 .icon-temporary-link:before { content: '\e831'; } /* '' */
 .icon-tools-heatmap:before { content: '\e832'; } /* '' */
@@ -72,5 +72,5 @@
 .icon-unpin:before { content: '\e84a'; } /* '' */
 .icon-pin:before { content: '\e84b'; } /* '' */
 .icon-credentials:before { content: '\e84c'; } /* '' */
+.icon-status-bar-geo:before { content: '\e84d'; } /* '' */
 .icon-credentials-request:before { content: '\e84f'; } /* '' */
-.icon-status-bar-orientation:before { content: '\e90d'; } /* '' */
