--- a/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.less
@@ -38,7 +38,7 @@
 			background: transparent;
 		}
 
-		&.active, &:active {
+		&.active:not(:disabled), &:active:not(:disabled) {
 			box-shadow: 0 0 2px 2px #666;
 		}
 
