--- a/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.less
@@ -21,6 +21,7 @@
 
 	i {
 		font-size: 25px;
+		color: white;
 	}
 
 	button {
@@ -34,11 +35,14 @@
 		border-radius: 5px;
 		background: #494949;
 
+		&:disabled {
+			opacity: 0.3;
+		}
 		&.transparent {
 			background: transparent;
 		}
 
-		&.active, &:active {
+		&.active:not(:disabled), &:active:not(:disabled) {
 			box-shadow: 0 0 2px 2px #666;
 		}
 
