--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -5,26 +5,22 @@
 	<div class="box">
 		<button ansynComboBoxTrigger
 				#timePickerTrigger
-				(click)="toggleTimelineStartEndSearch()"
+				[owlDateTimeTrigger]="dt10"
 				[attr.tooltip-value]="statusBarConfig?.toolTips?.timeFilterEdit | translate"
 				[isActive]="timeSelectionExpand"
-				[withArrow]="false"
-				icon="icon icon-status-bar-time"
+				icon="icon-status-bar-time"
 				tooltip-class="top"
-		class="search-panel-button">
-			<span class="title">{{timeSelectionTitle}}</span>
+				class="combo-box-width">
+			<span class="render">{{'Start-End' | translate}}</span>
 		</button>
 
-		<ansyn-timeline-timepicker
-			*ngIf="timeSelectionExpand"
-			(ansynClickOutside)="toggleTimelineStartEndSearch($event)"
-			[trigger]="timePickerTrigger.optionsTrigger.nativeElement"
-			[startDatePickerValue]="(time)?.from"
-			[endDatePickerValue]="(time)?.to"
-			(closeComponent)="toggleTimelineStartEndSearch()"
-			(applyDate)="applyTimelinePickerResult($event)">
-		</ansyn-timeline-timepicker>
-	</div>
+		<input timePickerInput
+			   [owlDateTime]="dt10"
+			   [selectMode]="'range'"
+			   [(ngModel)]="timeRange"
+			   (dateTimeChange)="onTimeRangeChange($event)"
+			   class="time-picker-input">
+		<owl-date-time #dt10 [backdropClass]="'time-picker-backdrop-undo'"></owl-date-time>	</div>
 
 	<!-- Geo filter -->
 	<div class="box" id="editGeoFilter">
