--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -150,10 +150,7 @@
 	right: 7px;
 }
 
-// time picker: vertical position & font
-/deep/ .owl-dt-popup {
-	transform: translateY(calc(~"4px - @{status-bar-height}"));
-}
+// time picker: set font
 /deep/ .owl-dt-container {
 	font-family: @app-font;
 }
