2888 new time picker (#2958)
* Implementing a transparent input element to position the new time picker

* Implementing event to trigger a search when the time range is set

* Undo time picker backdrop

* Now consuming @ansyn/ng-pick-datetime

* Cleaning up:
-removing commented code
-removing the older time picker component
-removing dependency flatpickr

* Unit test updates

* Time picker: using hebrew locale for dates

* Time picker: using the default app font

* update package @ansyn/ng-pick-datetime

* time picker: setting locale in component rather than in module (so that we will be able to use our injected config)

* time picker: setting locale in according to configuration

* time picker: link its translation provider to the app translation service

* tweaks

* After merge with master: moving changes from old (deleted) component to new component search-panel

* merge fix

* Re positioning the time picker

* An improved positioning of the time picker's input (but still leaving it tranparent)

* Adding new time picker depdencies in @ansyn/ansyn package

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -27,6 +27,7 @@
 		}
 
 		.box {
+			position: relative;
 			margin: 0 1px;
 
 			/deep/ button.search-panel-button {
@@ -77,6 +78,20 @@
 					}
 				}
 			}
+		}
+		input.time-picker-input {
+			position: absolute;
+			top: 0;
+			padding-left: 28px;
+			width: 100%;
+			height: 100%;
+			border: none;
+			background-color: transparent;
+			color: white;
+			opacity: 0;
+			pointer-events: none;
+			font-family: @app-font;
+			font-size: 14px;
 		}
 	}
 }
