--- a/src/app/@ansyn/ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/ansyn/assets/styles/styles.css
@@ -1,5 +1,4 @@
 @import "~ol/ol.css";
-@import "~flatpickr/dist/flatpickr.css";
 @import "~@ansyn/event-drops/style.css";
 @import "bootstrap/carousel.css";
 @import 'icons.css';
@@ -9,6 +8,7 @@
 @import "~font-awesome/css/font-awesome.min.css";
 @import "~cesium/Build/Cesium/Widgets/widgets.css";
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "~@ansyn/ng-pick-datetime/assets/style/picker.min.css";
 
 
 circle.drop.selected {
@@ -236,14 +236,8 @@ div.pin-location {
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
-.flatpickr-calendar {
-	font-family: 'Lato', sans-serif;
-	font-size: 14px;
-	cursor: pointer;
-}
-
-.flatpickr-calendar .flatpickr-month {
-	height: 33px;
+.time-picker-backdrop-undo {
+	display: none;
 }
 
 input[type=number]::-webkit-inner-spin-button,
