--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -14,6 +14,8 @@
 
 	<button (click)="setOverlays()">Set overlays in timeline</button>
 
+	<button (click)="checkCredentialsByArea()">Send Area Credentials Request</button>
+
 	<button (click)="displayOverlay()">Display overlay - active map</button>
 
 	<button (click)="setLayout2maps()">Set layout 2 maps</button>
