removing layers list from unregistered overlay

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -11,7 +11,7 @@
 			[ngModel]="activeAnnotationId"
 			[comboBoxToolTipDescription]="'choose annotation layer' | translate"
 			(ngModelChange)="setSelectedAnnotationLayer($event)">
-
+			[disabledg]="isGeoOptionsDisabled"
 			<ansyn-combo-box-option *ngFor="let layer of annotationLayer$ | async" [value]="layer.id" [disabled]="layer.isNonEditable">
 				{{ layer.name }}
 			</ansyn-combo-box-option>
