--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
@@ -68,7 +68,7 @@
 			<span class="icon-annotations"></span>
 		</button>
 		<ansyn-annotations-control
-			[isGeoOptionsDisabled]="isGeoOptionsDisabled"
+			isGeoOptionsDisabled="isGeoOptionsDisabled"
 			[expand]="isExpand(subMenuEnum.annotations) && !isGeoOptionsDisabled"></ansyn-annotations-control>
 	</div>
 
