remodeling export-maps-popup

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/export-maps-popup/export-maps-popup.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/export-maps-popup/export-maps-popup.component.less
@@ -10,6 +10,10 @@
 		.mat-dialog-title {
 			background-color: @background-color-4;
 			color: white;
+
+			.close ::ng-deep .mat-button-focus-overlay {
+				display: none;
+			}
 		}
 
 		.info {
