remodeling export-maps-popup

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/export-maps-popup/export-maps-popup.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/export-maps-popup/export-maps-popup.component.html
@@ -2,7 +2,7 @@
 	<div mat-dialog-content>
 		<div mat-dialog-title>
 			<button class="close" mat-button (click)="closeModal()">X</button>
-			<h1 mat-dialog-title>   {{title | translate}} {{credentialsService?.titleUser}}</h1>
+			<h1 mat-dialog-title class="title-message">{{title | translate}} {{credentialsService?.titleUser}}</h1>
 		</div>
 <!--		<mat-progress-bar class="main-progress" color="primary" mode="indeterminate"></mat-progress-bar>-->
 		<br>
