--- a/src/app/@ansyn/ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/ansyn/assets/styles/styles.css
@@ -26,8 +26,9 @@ circle.drop.selected {
 .close.mat-button {
 	cursor: pointer;
 	float: right;
+	padding: 0;
 	marginTop: 5px;
-	width: 20px;
+	min-width: 25px;
 }
 
 .main-progress .mat-progress-bar-fill::after {
