remodeling export-maps-popup (#2971)
* remodeling export-maps-popup

* remodeling export-maps-popup

* updating title

* updating styles

* updating styles

--- a/src/app/@ansyn/ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/ansyn/assets/styles/styles.css
@@ -17,16 +17,18 @@ circle.drop.selected {
 
 
 .custom-dialog .mat-dialog-container {
-		padding: 0;
-		width: 600px;
-		overflow: hidden;
+	padding: 0;
+	width: 600px;
+	overflow: hidden;
+	text-align: center;
 }
 
 .close.mat-button {
 	cursor: pointer;
 	float: right;
+	padding: 0;
 	marginTop: 5px;
-	width: 20px;
+	min-width: 25px;
 }
 
 .main-progress .mat-progress-bar-fill::after {
