--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/export-maps-popup/export-maps-popup.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/export-maps-popup/export-maps-popup.component.html
@@ -2,9 +2,9 @@
 	<div mat-dialog-content>
 		<div mat-dialog-title>
 			<button class="close" mat-button (click)="closeModal()">X</button>
-			<h1 mat-dialog-title>!{{title | translate}}, {{credentialsService?.user}}</h1>
+			<h1 mat-dialog-title class="title-message">{{title | translate}} {{credentialsService?.titleUser}}</h1>
 		</div>
-		<mat-progress-bar class="main-progress" color="primary" mode="indeterminate"></mat-progress-bar>
+<!--		<mat-progress-bar class="main-progress" color="primary" mode="indeterminate"></mat-progress-bar>-->
 		<br>
 		<p mat-dialog-title class="info">
 			{{description | translate}}
