--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-change-map/imagery-change-map.component.less
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-change-map/imagery-change-map.component.less
@@ -13,6 +13,7 @@
 		line-height: 0;
 		left: 5px;
 		top: 6px;
+		padding: 4px;
 
 		&:hover:not(.active):not(.disabled) {
 			background: rgba(0, 0, 0, 0.5);
