--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
@@ -69,7 +69,10 @@
 		</button>
 		<ansyn-annotations-control
 			[isGeoOptionsDisabled]="isGeoOptionsDisabled"
-			[expand]="isExpand(subMenuEnum.annotations) && !isGeoOptionsDisabled"></ansyn-annotations-control>
+			[expand]="isExpand(subMenuEnum.annotations) && !isGeoOptionsDisabled"
+			(hideMe)="stam()"
+		></ansyn-annotations-control>
+
 	</div>
 
 	<div class="distance-measure-tool">
