--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
@@ -63,14 +63,14 @@
 		<button tooltip-class="right"
 				[attr.tooltip-value]="'Annotations' | translate"
 				[class.active]="isExpand(subMenuEnum.annotations) && !isGeoOptionsDisabled"
-				(click)="toggleSubMenu(subMenuEnum.annotations)"
+				(click)="toggleSubMenu(subMenuEnum.annotations, $event)"
 				[disabled]="!(isActiveAnnotationLayer$ | async) || isGeoOptionsDisabled">
 			<span class="icon-annotations"></span>
 		</button>
 		<ansyn-annotations-control
 			[isGeoOptionsDisabled]="isGeoOptionsDisabled"
 			[expand]="isExpand(subMenuEnum.annotations) && !isGeoOptionsDisabled"
-			(hideMe)="stam()"
+			(hideMe)="toggleSubMenu(subMenuEnum.annotations)"
 		></ansyn-annotations-control>
 
 	</div>
