--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -31,26 +31,29 @@
 .icon-main-tools:before { content: '\e81d'; } /* '' */
 .icon-quick-loop-add:before { content: '\e81e'; } /* '' */
 .icon-main-uploads:before { content: '\e81f'; } /* '' */
-.icon-download-guid:before { content: '\e820'; } /* '' */
-.icon-quick-loop:before { content: '\e821'; } /* '' */
-.icon-remove-overlay:before { content: '\e822'; } /* '' */
-.icon-main-algorithms:before { content: '\e823'; } /* '' */
-.icon-copy-coords:before { content: '\e824'; } /* '' */
-.icon-label:before { content: '\e825'; } /* '' */
-.icon-drag-annotations:before { content: '\e826'; } /* '' */
-.icon-next:before { content: '\e827'; } /* '' */
-.icon-prev:before { content: '\e828'; } /* '' */
-.icon-shadow-mouse:before { content: '\e829'; } /* '' */
-.icon-share:before { content: '\e82a'; } /* '' */
-.icon-status-bar-case:before { content: '\e82b'; } /* '' */
+.icon-download:before { content: '\e820'; } /* '' */
+.icon-download-guid:before { content: '\e821'; } /* '' */
+.icon-quick-loop:before { content: '\e822'; } /* '' */
+.icon-remove-overlay:before { content: '\e823'; } /* '' */
+.icon-main-algorithms:before { content: '\e824'; } /* '' */
+.icon-copy-coords:before { content: '\e825'; } /* '' */
+.icon-label:before { content: '\e826'; } /* '' */
+.icon-drag-annotations:before { content: '\e827'; } /* '' */
+.icon-next:before { content: '\e828'; } /* '' */
+.icon-prev:before { content: '\e829'; } /* '' */
+.icon-shadow-mouse:before { content: '\e82a'; } /* '' */
+.icon-share:before { content: '\e82b'; } /* '' */
+.icon-status-bar-case:before { content: '\e82c'; } /* '' */
 .icon-status-bar-imagery-count:before { content: '\e82d'; } /* '' */
 .icon-input-filter:before { content: '\e82e'; } /* '' */
+.icon-area-big:before { content: '\e82f'; } /* '' */
 .icon-status-bar-time:before { content: '\e830'; } /* '' */
 .icon-temporary-link:before { content: '\e831'; } /* '' */
 .icon-tools-heatmap:before { content: '\e832'; } /* '' */
 .icon-tools-go-to:before { content: '\e833'; } /* '' */
 .icon-tools-image-processing:before { content: '\e834'; } /* '' */
 .icon-tools-ruler:before { content: '\e835'; } /* '' */
+.icon-down-circled2:before { content: '\e836'; } /* '' */
 .icon-upload:before { content: '\e837'; } /* '' */
 .icon-restore-overlay:before { content: '\e838'; } /* '' */
 .icon-export-maps:before { content: '\e839'; } /* '' */
@@ -69,8 +72,10 @@
 .icon-screen-1:before { content: '\e846'; } /* '' */
 .icon-drag-maps:before { content: '\e847'; } /* '' */
 .icon-main-settings:before { content: '\e848'; } /* '' */
+.icon-area-small:before { content: '\e849'; } /* '' */
 .icon-unpin:before { content: '\e84a'; } /* '' */
 .icon-pin:before { content: '\e84b'; } /* '' */
 .icon-credentials:before { content: '\e84c'; } /* '' */
 .icon-status-bar-geo:before { content: '\e84d'; } /* '' */
+.icon-method-draw-image:before { content: '\e84e'; } /* '' */
 .icon-credentials-request:before { content: '\e84f'; } /* '' */
