--- a/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.html
@@ -5,7 +5,7 @@
 			[attr.tooltip-value]="statusBarConfig?.toolTips?.backwards | translate"
 			tooltip-class="top left"
 	>
-		<i class="icon-prev"></i>
+		<i class="icon-navigation-prev"></i>
 	</button>
 
 	<button (click)="clickGoNextPresetOverlay()"
@@ -23,7 +23,7 @@
 			[attr.tooltip-value]="statusBarConfig?.toolTips?.forward | translate"
 			tooltip-class="top left"
 	>
-		<i class="icon-next"></i>
+		<i class="icon-navigation-next"></i>
 	</button>
 	<!--unUsed stop button - future development -->
 	<button style="display: none" class="transparent"
