improve image processing

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
@@ -20,28 +20,29 @@
 		<ansyn-go-to [disabled]="isGeoOptionsDisabled"></ansyn-go-to>
 	</div>
 
-<!--	<div class="image-auto-processing">-->
-<!--		<button tooltip-class="right"-->
-<!--				[attr.tooltip-value]="'Automatic Processing - Grayscale Images Only' | translate"-->
-<!--				(click)="toggleAutoImageProcessing()"-->
-<!--				[class.mode-on]="onAutoImageProcessing && !imageProcessingDisabled"-->
-<!--				[disabled]="imageProcessingDisabled">-->
-<!--			<i class="icon-automatic-image-processing"></i>-->
-<!--		</button>-->
-<!--	</div>-->
+	<div class="image-auto-processing">
+		<button tooltip-class="right"
+				[attr.tooltip-value]="'Automatic Processing - Grayscale Images Only' | translate"
+				(click)="toggleAutoImageProcessing()"
+				[class.mode-on]="onAutoImageProcessing && !imageProcessingDisabled"
+				[disabled]="imageProcessingDisabled">
+			<i class="icon-automatic-image-processing"></i>
+		</button>
+	</div>
 
-<!--	<div class="image-manual-processing">-->
-<!--		<button tooltip-class="right"-->
-<!--				[attr.tooltip-value]="'Manual Image Enhancement' | translate"-->
-<!--				(click)="toggleSubMenu(subMenuEnum.manualImageProcessing)"-->
-<!--				[class.mode-on]="isImageControlActive && !imageManualProcessingDisabled"-->
-<!--				[class.active]="isExpand(subMenuEnum.manualImageProcessing) && !imageManualProcessingDisabled"-->
-<!--				[disabled]="imageManualProcessingDisabled">-->
-<!--			<i class="icon-tools-image-processing"></i>-->
-<!--		</button>-->
-<!--		<ansyn-image-processing-control-->
-<!--			[expand]="isExpand(subMenuEnum.manualImageProcessing) && !onAutoImageProcessing "></ansyn-image-processing-control>-->
-<!--	</div>-->
+	<div class="image-manual-processing">
+		<button tooltip-class="right"
+				[attr.tooltip-value]="'Manual Image Enhancement' | translate"
+				(click)="toggleSubMenu(subMenuEnum.manualImageProcessing)"
+				[class.mode-on]="isImageControlActive && !imageManualProcessingDisabled"
+				[class.active]="isExpand(subMenuEnum.manualImageProcessing) && !imageManualProcessingDisabled"
+				[disabled]="imageManualProcessingDisabled">
+			<i class="icon-tools-image-processing"></i>
+		</button>
+		<ansyn-image-processing-control
+			[expand]="isExpand(subMenuEnum.manualImageProcessing) && !onAutoImageProcessing "></ansyn-image-processing-control>
+	</div>
+
 	<div class="display-overlay-visualizer">
 		<button tooltip-class="right"
 				[attr.tooltip-value]="'Overlays Footprint' | translate"
