--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -50,4 +50,6 @@
 	<button (click)="showLayer()">Show/Hide Layer</button>
 	<button (click)="startDrag()">Start Drag</button>
 	<button (click)="stopDrag()">Stop Drag</button>
+
+	<button (click)="testImageProcess()">Test Image Process</button>
 </div>
