--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -106,7 +106,7 @@ div.menu-wrapper {
 					background-color: @application-primary-color;
 				}
 
-				&.first-start {
+				&.draw-user-attention {
 					background-color: #3d1a1a;
 				}
 
