--- a/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-form/tasks-form.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-form/tasks-form.component.less
@@ -39,7 +39,7 @@
 	visibility: hidden;
 }
 
-/deep/ ansyn-input#ansyn-task-name {
+::ng-deep ansyn-input#ansyn-task-name {
 	label {
 		.small-padding-left;
 		.small-font;
