--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -36,7 +36,7 @@
 			padding: 7px 0;
 			display: flex;
 
-			/deep/ .options-container {
+			::ng-deep .options-container {
 				max-height: 150px !important;
 				margin-top: 5px;
 				overflow: auto;
