--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -30,7 +30,7 @@
 			position: relative;
 			margin: 0 1px;
 
-			/deep/ button.search-panel-button {
+			::ng-deep button.search-panel-button {
 				padding: 5px 11px 5px 0px;
 				background: @status-bar-panels;
 
