--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.less
@@ -14,7 +14,7 @@
 		box-sizing: border-box;
 	}
 
-	/deep/ .ol-scale-line {
+	::ng-deep .ol-scale-line {
 		background-color: transparent;
 		bottom: 0;
 		left: 0;
