--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -3,7 +3,7 @@
 @import 'ansyn/less/globals';
 @import 'ansyn/less/common';
 
-/deep/ .render {
+::ng-deep .render {
 	display: flex;
 	align-items: center;
 }
@@ -92,7 +92,7 @@
 		}
 	}
 
-	/deep/ ansyn-alerts-container {
+	::ng-deep ansyn-alerts-container {
 		max-width: 33%;
 	}
 }
