--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-label/annotation-label.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-label/annotation-label.component.less
@@ -62,23 +62,23 @@
 			color: white;
 		}
 
-		/deep/ .mat-select-arrow {
+		::ng-deep .mat-select-arrow {
 			color: white;
 		}
 
-		/deep/ .mat-form-field-label, /deep/ .mat-select-value-text {
+		::ng-deep .mat-form-field-label, ::ng-deep .mat-select-value-text {
 			color: @white-inactive !important;
 		}
 
-		/deep/ .mat-form-field-underline {
+		::ng-deep .mat-form-field-underline {
 			background-color: @white-inactive !important;
 		}
 
-		/deep/ .mat-focused .mat-form-field-label {
+		::ng-deep .mat-focused .mat-form-field-label {
 			color: white !important;
 		}
 
-		/deep/ .mat-form-field-ripple {
+		::ng-deep .mat-form-field-ripple {
 			background-color: white !important;
 		}
 	}
