--- a/src/app/app/app.component.less
+++ b/src/app/app/app.component.less
@@ -12,7 +12,7 @@
 	overflow: hidden;
 }
 
-/deep/ body {
+::ng-deep body {
 	margin: 0;
 	background: url(/assets/background.webp) no-repeat;
 	background-size: cover;
