--- a/src/app/@ansyn/ansyn/modules/core/forms/ansyn-input/ansyn-input.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/ansyn-input/ansyn-input.component.less
@@ -11,30 +11,30 @@
 				color: white;
 			}
 
-			/deep/ .mat-form-field-label {
+			::ng-deep .mat-form-field-label {
 				color: @white-inactive !important;
 			}
 
-			/deep/ .mat-form-field-underline {
+			::ng-deep .mat-form-field-underline {
 				background-color: @white-inactive !important;
 			}
 
-			/deep/ .mat-focused .mat-form-field-label {
+			::ng-deep .mat-focused .mat-form-field-label {
 				color: white !important;
 			}
 
-			/deep/ .mat-form-field-ripple {
+			::ng-deep .mat-form-field-ripple {
 				background-color: white !important;
 			}
 		}
 
 	}
 
-	/deep/ .mat-focused .mat-form-field-label {
+	::ng-deep .mat-focused .mat-form-field-label {
 		color: @background-color-3 !important;
 	}
 
-	/deep/ .mat-form-field-ripple {
+	::ng-deep .mat-form-field-ripple {
 		background-color: @background-color-3 !important;
 	}
 
