--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box-option/combo-box-option.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box-option/combo-box-option.component.less
@@ -49,7 +49,7 @@
 			font-size: 16px;
 		}
 
-		/deep/ span.for-title-only {
+		::ng-deep span.for-title-only {
 			visibility: hidden;
 			width: 0;
 		}
