--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/slider-filter-container/slider-filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/slider-filter-container/slider-filter-container.component.less
@@ -17,7 +17,7 @@
 }
 
 .slider {
-	/deep/ .ui-slider {
+	::ng-deep .ui-slider {
 		height: 10px;
 		background: transparent;
 		margin: 0 10px 0 10px;
@@ -33,7 +33,7 @@
 		}
 	}
 
-	/deep/ .ui-slider-handle {
+	::ng-deep .ui-slider-handle {
 		margin-top: 2px;
 		cursor: pointer;
 		z-index: 2;
@@ -43,17 +43,17 @@
 		width: 10px !important; /* 3rd party component is using important */
 	}
 
-	/deep/ .ui-slider-handle-active {
+	::ng-deep .ui-slider-handle-active {
 		z-index: 1;
 	}
 
-	/deep/ .ui-slider-range {
+	::ng-deep .ui-slider-range {
 		z-index: 0;
 		background: @application-primary-color;
 
 	}
 
-	/deep/ .ui-slider-horizontal .ui-slider-range {
+	::ng-deep .ui-slider-horizontal .ui-slider-range {
 		height: 2px;
 		top: 50%;
 		padding: 0;
