--- a/src/app/@ansyn/ansyn/modules/menu-items/help/components/help.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/help/components/help.component.less
@@ -21,12 +21,12 @@
 
 		&.rtl {
 		    direction: rtl;
-			/deep/ .carousel-control-prev {
+			::ng-deep .carousel-control-prev {
 				right: 0;
 				left: initial;
 				transform: rotate(180deg);
 			}
-			/deep/ .carousel-control-next {
+			::ng-deep .carousel-control-next {
 				left: 0;
 				right: initial;
 				transform: rotate(180deg);
@@ -104,7 +104,7 @@
 }
 
 // Make the carousel indicators round
-/deep/ .carousel-indicators {
+::ng-deep .carousel-indicators {
 	li {
 		height: 10px;
 		width: 10px;
@@ -114,7 +114,7 @@
 
 // Replace the next/prev controls
 
-/deep/ .carousel-control-prev {
+::ng-deep .carousel-control-prev {
 	opacity: 0.8;
 
 	.carousel-control-prev-icon {
@@ -130,7 +130,7 @@
 	}
 }
 
-/deep/ .carousel-control-next {
+::ng-deep .carousel-control-next {
 	opacity: 0.8;
 
 	.carousel-control-next-icon {
