--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -20,17 +20,17 @@
 		&.rtl {
 			flex-direction: row-reverse;
 
-			/deep/ ansyn-search-panel {
+			::ng-deep ansyn-search-panel {
 				justify-content: flex-end;
 			}
 
-			/deep/ ansyn-case-panel {
+			::ng-deep ansyn-case-panel {
 				border-left: none;
 				border-right: 1px solid @status-bar-delimiter;
 			}
 		}
 
-		/deep/ i.icon, span.title{
+		::ng-deep i.icon, span.title{
 			margin: 0 5px;
 		}
 	}
