--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
@@ -20,15 +20,15 @@
 		<ansyn-go-to [disabled]="isGeoOptionsDisabled"></ansyn-go-to>
 	</div>
 
-<!--	<div class="image-auto-processing">-->
-<!--		<button tooltip-class="right"-->
-<!--				[attr.tooltip-value]="'Automatic Processing - Grayscale Images Only' | translate"-->
-<!--				(click)="toggleAutoImageProcessing()"-->
-<!--				[class.mode-on]="onAutoImageProcessing && !imageProcessingDisabled"-->
-<!--				[disabled]="imageProcessingDisabled">-->
-<!--			<i class="icon-automatic-image-processing"></i>-->
-<!--		</button>-->
-<!--	</div>-->
+	<div class="image-auto-processing">
+		<button tooltip-class="right"
+				[attr.tooltip-value]="'Automatic Processing - Grayscale Images Only' | translate"
+				(click)="toggleAutoImageProcessing()"
+				[class.mode-on]="onAutoImageProcessing && !imageProcessingDisabled"
+				[disabled]="imageProcessingDisabled">
+			<i class="icon-automatic-image-processing"></i>
+		</button>
+	</div>
 
 	<div class="image-manual-processing">
 		<button tooltip-class="right"
