--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1505,5 +1505,8 @@
   "anaglyphConfig": {
   	"getStereoUrl": "needed test",
   	"sensorNames": {{ getv "/ansyn/anaglyph/sensornames" "null" }}
-  }
+  },
+  "addressService": {
+      "url": "http://localhost:8080"
+    }
 }
