updating production.tmpl

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1507,6 +1507,6 @@
   	"sensorNames": {{ getv "/ansyn/anaglyph/sensornames" "null" }}
   },
   "addressService": {
-      "url": "http://localhost:8080"
+      "url": "assets/config/addresses.json"
     }
 }
