--- a/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
@@ -20,13 +20,13 @@
 		</div>
 	</div>
 	<div class="rectangles">
-		<button (click)="nextOverlay($event, true)"
-				[disabled]="!overlay">
-			<i class="icon-navigation-next"></i>
-		</button>
 		<button (click)="nextOverlay($event, false)"
 				[disabled]="!overlay">
-			<i class="icon-navigation-prev"></i>
+			<i class="icon-app-prev"></i>
+		</button>
+		<button (click)="nextOverlay($event, true)"
+				[disabled]="!overlay">
+			<i class="icon-app-next"></i>
 		</button>
 	</div>
 </div>
